welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:3: error: not a legal formal parameter
		case num if ((num%10==0)		=> return true
                                    ^nearTen:4: error: ')' expected but 'case' found.
		case num if ((num+1)%10==0)	=> return true
                ^